# QustomKeyboard

./: CMakeLists.txt  CMakePresets.json  CanTab.ui  LICENSE  README.md  application.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  systray.pro  systray.qrc
libs/: CMakeLists.txt
libs/enumser/: enumser.cpp  enumser.h
libs/hidapi/: hidapi.h
libs/isotp/: isotp.c
libs/lodepng/: lodepng.cpp
libs/sqlite/: shell.c  sqlite3.h  sqlite3ext.h
src/: ApplicationBase.cpp  ApplicationBase.hpp  CanDeviceLawicel.cpp  CanEntryHandler.cpp  CanEntryHandler.hpp  CanScriptHandler.cpp  CanScriptHandler.hpp  CanSerialPort.cpp  CmdExecutor.cpp  CorsairHid.cpp  CustomMacro.cpp  CustomMacro.hpp  DatabaseLogic.cpp  DidHandler.cpp  DidHandler.hpp  DirectoryBackup.cpp  ExceptionHandler.cpp  IdlePowerSaver.cpp  Logger.cpp  Logger.hpp  MapConverter.cpp  PrintScreenSaver.cpp  Sensors.cpp  Sensors.hpp  Server.cpp  Settings.cpp  Settings.hpp  SymlinkCreator.cpp  TcpMessageExecutor.cpp  TerminalHotkey.cpp  Utils.cpp  Utils.hpp  pch.hpp
src/gui/: BalloonTip.hpp  CanTab.ui  CmdExecutorTab.hpp  DidTab.cpp  DidTab.hpp  LoggerTab.cpp  LoggerTab.hpp  MapConverterTab.cpp  MapConverterTab.hpp  StringEscaperTab.cpp  StringEscaperTab.hpp  StructParserTab.cpp  StructParserTab.hpp  mainwindow.cpp  mainwindow.hpp
src/gui/CanTab/: BitEditorDialog.cpp  BitEditorDialog.hpp  CanLogTab.cpp  CanLogTab.hpp  CanScriptTab.cpp  CanScriptTab.hpp  CanTab.cpp  CanTab.hpp  CanTab.ui  CanUdsRawDialog.cpp  CanUdsRawDialog.hpp
src/interface/: IDatabase.hpp
src/utils/: AsyncSerial.cpp
